fixed spacing to be more dynamic

--- a/front-end/src/components/Button.css
+++ b/front-end/src/components/Button.css
@@ -3,7 +3,7 @@
     border: none;              
     border-radius: 10px;    
     font-family: Figtree;
-    font-size: 500px;
+    font-size: 200px;
     color: #ff1f58;
     cursor: pointer;           
     transition: background-color 0.3s;
